--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Zhiyuan Liu"
 title_separator          : "-"
 name                     : &name "Zhiyuan Liu"
 description              : &description "Graduate Student"
-url                      : https://zhiyuanliu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://liuzhiyuan0903.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "liuzhiyuan0903/zhiyuanliu.github.io"
+repository               : "liuzhiyuan0903/liuzhiyuan0903.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
