--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Zhiyuan Liu"
 title_separator          : "-"
 name                     : &name "Zhiyuan Liu"
-description              : &description "Graduate Student"
+description              : &description "Graduate Student\nSchool of Infomation\nRenmin University of China"
 url                      : https://liuzhiyuan0903.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "liuzhiyuan0903/liuzhiyuan0903.github.io"
@@ -83,7 +83,7 @@ author:
   name             : "Zhiyuan Liu"
   avatar           : "profile.png"
   bio              : "Graduate Student"
-  location         : "Renmin University of China"
+  location         : "Beijing, China"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   #googlescholar    : "http://yourfullgooglescholarurl.com"
